[package]
name = "passwd"
version = "0.0.1"
authors = ["Ian D. Scott <ian@iandouglasscott.com>"]
description = "Bindings for libc /etc/passwd password functions"
repository = "https://github.com/ids1024/passwd-rs"
documentation = "https://docs.rs/passwd"
license = "MIT"

[dependencies]
libc = "0.2"
